--- a/src/collective/cookiecuttr/locales/sl/LC_MESSAGES/collective.cookiecuttr.po
+++ b/src/collective/cookiecuttr/locales/sl/LC_MESSAGES/collective.cookiecuttr.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.1\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2013-06-17 16:54+0000\n"
-"PO-Revision-Date: 2012-09-24 11:44+0100\n"
-"Last-Translator: Ralph Jacobs <ralph@fourdigits.nl>\n"
-"Language-Team: Four Digits <support@fourdigits.nl>\n"
+"PO-Revision-Date: 2013-06-17 18:55+0100\n"
+"Last-Translator: Jure Cerjak <jcerjak@termitnjak.si>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,13 +12,13 @@ msgstr ""
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: collective.cookiecuttr\n"
+"Domain: DOMAIN\n"
 
 #: ./profiles/default/propertiestool.xml
 msgid "Accept cookies"
-msgstr "Accept cookies"
+msgstr "Sprejmi piškotke"
 
 #: ./profiles/default/propertiestool.xml
 msgid "Decline cookies"
-msgstr ""
+msgstr "Zavrni piškotke"
 
